# hello-world-container-lambda

./: .editorconfig  .gitignore  2  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  package.json
.cargo/: config
infrastructure/: .terraform.lock.hcl  main.tf  outputs.tf  select_environment.sh  variables.tf
infrastructure/environments/dev/: backend.config  variables.tfvars
logger/: Cargo.toml
logger/src/: lib.rs
src/: lib.rs
src/domain/: api_response.rs  canvas.rs  checkerboard_request.rs  color.rs  error_api_response.rs  event.rs  http_status.rs  image_api_response.rs  mod.rs  request_type.rs  shape.rs
src/domain/errors/: base_error.rs  error_severity.rs  invalid_query_param_error.rs  mod.rs
src/handlers/: checkerboard.rs
src/service/: api_gateway_mapper.rs  canvas_skia.rs  color_transformer.rs  dependency_resolver.rs  mod.rs
src/service/validator/: api_validator.rs  mod.rs
src/service/validator/schemas/: base_query_params.rs  checkerboard.rs  checkerboard_schema.rs  mod.rs  schema.rs
test/events/: checkerboard_api_gw.json
