[package]
name = "hello-world-container-lambda"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "checkerboard"
path = "src/handlers/checkerboard.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
simple_logger = "1.13.0"
tokio = "1.12.0"
aws_lambda_events = "0.5.0"
http = "0.2.5"
