[package]
name = "hello-world-container-lambda"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "checkerboard"
path = "src/handlers/checkerboard.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
valico = "3.6.0"
regex = "1.5.4"

lambda_runtime = "0.4.1"
log = "0.4.14"
simple_logger = "1.13.0"
tokio = "1.12.0"

tiny-skia = { git = "https://github.com/RazrFalcon/tiny-skia" }
base64 = "0.13.0"
